@@ -1,6 +1,7 @@
 OpenLDAP 2.3 Change Log
 
 OpenLDAP 2.3.35 Engineering
+	Fixed entry consistency check in str2entry2 (ITS#4852)
 	Fixed slapd-bdb/hdb startup with missing shm env (ITS#4851)
 
 OpenLDAP 2.3.34 Release (2007/02/16)
